# CliffordNet

./: .gitignore  pyproject.toml  run.sh  run_training.sh  train.py  train_cifar100.py  train_imagenet1k.py  train_imagenet1k_overfitval.py  train_imagenet21k.py
