[project]
name = "cliffordnet"
version = "0.1.0"
description = "CliffordNet: Geometric Algebra for Vision"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.0.0",
    "lightning>=2.6.1",
    "rich>=13.0.0",
    "tensorboard>=2.15.0",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
